deployment_timetracker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anuko-timetracker
spec:
  replicas: 1
  template:
    metadata:
      name: anuko-timetracker
      labels:
        app: anuko-timetracker
    spec:
      containers:
        - name: anuko-timetracker
          image: anuko_timetracker:1.18.36
          imagePullPolicy: Never
#          env:
#            - name: ENVIRONMENT
#              valueFrom:
#                configMapKeyRef:
#                  name: env-data
#                  key: ENVIRONMENT
          ports:
            - containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: anuko-timetracker
spec:
  ports:
    - port: 80
  selector:
    app: anuko-timetracker
  clusterIP: None
