ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: anuko-timetracker-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: kubernetes.docker.internal
      http:
        paths:
          - backend:
              serviceName: anuko-timetracker
              servicePort: 80
#apiVersion: extensions/v1beta1
#kind: Ingress
#metadata:
#  name: anuko-timetracker-ingress
#  annotations:
#    ingress.kubernetes.io/rewrite-target: /
#spec:
#  rules:
#    - http:
#        paths:
#          - path: /
#            backend:
#              serviceName: anuko-timetracker
#              servicePort: 80
